Update home hamburg image to fit screen size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="secondName">Maack</div>
             </div>
             <div class="title">M.Sc. Student, Mechatronics - Robotics and Intelligent Systems</div>
-            <div class="title">& Software Engineer</div>
+            <!-- <div class="title">& Software Engineer</div> -->
             <div class="links">
                 <a 
                     href="www.linkedin.com/in/lennart-maack"
@@ -52,11 +52,25 @@
                 ></a>
             </div>
         </div>
-
     </header>
+    
     <main>
-        <section class="section sec2 about" id="about"></section>
-        <section class="section sec3 work" id="work"></section>
+        <div class="section sec2 about" id="about">
+            <div class="about-content">
+                <div class="introduction">
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Excepturi, saepe explicabo illo rerum eum adipisci accusantium ex quaerat dignissimos officia tempore tempora dolorem officiis hic optio dolorum atque dolores ab.
+                </div>
+                <div class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic doloribus nemo quod, consectetur tenetur rem minus. Aspernatur dolore quo corrupti.</div>
+            </div>
+        </div>
+        <div class="section sec3 work" id="work">
+            <div class="work-content">
+                <div class="fraunhofer-content">
+                    <div class="fraunhofer-icon"><img src="./images/fraunhofer.jpg" height="60" /></div>
+                    <div class="fraunhofer-text">This is a text which belongs to fraunhofer</div>
+                </div>
+            </div>
+        </div>
         <section class="section sec4 pubsAndProjects" id="pubsAndProjects"></section>
         <section class="section sec5 blogArticles" id="blogArticles"></section>
         <section class="section sec6 skills" id="skills"></section>
